Updated open graph

--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
     <meta name="theme-color" content="#000000" />
     
     <!--Open graph tags-->
-    <meta rel='og:title' content='Naveen Venkatesan | Materials Science and Data Enthusiast' />
-    <meta rel='og:description' content='Personal website of Naveen Venkatesan' />
-    <meta rel='og:image' content='./img/aboutme.jpg' />
+    <meta property='og:title' content='Naveen Venkatesan | Materials Science and Data Enthusiast' />
+    <meta property='og:description' content='Personal website of Naveen Venkatesan' />
+    <meta property='og:image' content='./img/aboutme.jpg' />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
